# AI-shopping-assistant

./: README.md
agent/: README.md  j.json  main.py  poc.py  pyproject.toml  shopping_assistant.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/components/: canvas.tsx  comparison-view.tsx  product-card.tsx  query-interface.tsx  report-view.tsx  shopping-assistant.tsx  sidebar.tsx  tool-logs.tsx  tool-response.tsx  top-bar.tsx  wishlist-view.tsx
frontend/components/ui/: dialog.tsx  progress.tsx
