[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "orca-copilotkit",email = "testapp@copilotkit.ai"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
package-mode = false
[tool.poetry.dependencies]
openai = "1.100.1"
tavily-python = "0.7.11"
dotenv = "0.9.9"
jsonschema = "4.25.1"
bs4 = "0.0.2"
fastapi = "0.115.12"
uvicorn = "0.35.0"
copilotkit = "^0.1.60"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
